src/test/deca/context/invalid/created/decl_var/double_declaration_float.deca
// Description :
//    test d'une déclaration de variable de type float déjà existante
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10:  La variable a est déjà déclarée.

{
float a;
float a; // a est déclaré deux fois
}